# Simple-MCP

./: .gitignore  client.py  demo.csv  mcp_calculator_service.py  mcp_file_service.py  pyproject.toml  ui_server.py
ui/: app.js  index.html  style.css
